--- a/css/2.css
+++ b/css/2.css
@@ -64,7 +64,7 @@ canvas{
 html, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input {
+fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input,w3-row-padding,w3-margin-bottom {
   border: 0;
   outline: 0;
   font-size: 100%;
@@ -414,22 +414,7 @@ canvas{
   	display: none;
   }
 }
-@media (max-width: 750px) {
-  body, html, {
-    max-height: 100vh;
-  }
-   .error__content {
-    position: static;
-    margin: 0 auto;
-    transform: none;
-    padding-top: 300px;
-  }
-  .error {
-    padding-top: 0;
-    padding-bottom: 100px;
-    height: 100vh;
-  }
-}
+
 @media (max-width: 650px) {
   .message__title {
     font-size: 36px;
